add multifolder read

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,16 +4,20 @@ project(livogis)
 
 set(SRCS
 	  main.c
+		directory.c
+		xml_data.c
 	  )
 
 set(HEADERS
+		directory.h
+		xml_data.h
 	 )
 
 find_package(LibXml2 REQUIRED)
 
 message(STATUS LIBXML2_FOUND = ${LIBXML2_FOUND})
 
-set(CMAKE_C_FLAGS "-std=c99")
+set(CMAKE_C_FLAGS "-std=c11")
 
 include_directories(${LIBXML2_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR})
 add_executable(livogis ${SRCS} ${HEADERS})
