Create writing functions

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,12 +7,14 @@ set(SRCS
 		directory.c
 		xml_data.c
 		xml_reader.c
+		xml_writer.c
 	  )
 
 set(HEADERS
 		directory.h
 		xml_data.h
 		xml_reader.h
+		xml_writer.h
 	 )
 
 find_package(LibXml2 REQUIRED)
